[gd_scene load_steps=15 format=3 uid="uid://bwgf30ufty6ug"]

[ext_resource type="Script" path="res://scenes/PotteryWorkbench.gd" id="1_1ungh"]
[ext_resource type="ArrayMesh" uid="uid://womrvbfrmhdf" path="res://resources/workbench-empty.res" id="2_5jwwm"]
[ext_resource type="ArrayMesh" uid="uid://cey2tbxsxea70" path="res://resources/spinning-plate.res" id="3_g2k80"]
[ext_resource type="PackedScene" uid="uid://cme66uldrjl2i" path="res://addons/godot-xr-tools/interactables/interactable_area_button.tscn" id="4_jfb74"]
[ext_resource type="AudioStream" uid="uid://crgaexypgi7t4" path="res://assets/sounds/tuck.ogg" id="5_nk65y"]
[ext_resource type="AudioStream" uid="uid://bnji78bjbijho" path="res://assets/sounds/workshop - spining_wood.ogg" id="6_i5q4o"]

[sub_resource type="BoxShape3D" id="BoxShape3D_s5vmt"]
size = Vector3(1.03223, 0.844727, 0.646484)

[sub_resource type="CylinderShape3D" id="CylinderShape3D_wf56e"]
height = 0.0376662
radius = 0.286532

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_p8uf2"]
albedo_color = Color(0.747822, 0.722176, 0.72229, 1)
metallic = 0.8
roughness = 0.56

[sub_resource type="BoxMesh" id="BoxMesh_lu8nq"]
material = SubResource("StandardMaterial3D_p8uf2")
size = Vector3(0.2, 0.12, 0.16)

[sub_resource type="SphereShape3D" id="SphereShape3D_w2ld0"]
margin = 0.01
radius = 0.054927

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_0m8pi"]
albedo_color = Color(0.85, 0.2465, 0.2465, 1)
metallic = 0.1
roughness = 0.47

[sub_resource type="CylinderMesh" id="CylinderMesh_jeg72"]
material = SubResource("StandardMaterial3D_0m8pi")
top_radius = 0.03
bottom_radius = 0.04
height = 0.04
radial_segments = 9

[sub_resource type="BoxShape3D" id="BoxShape3D_1iycd"]
size = Vector3(0.201172, 0.138195, 0.15625)

[node name="PotteryWorkbench" type="Node3D"]
script = ExtResource("1_1ungh")

[node name="TableBody" type="StaticBody3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="TableBody"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.168915, 0.431363, 0)
shape = SubResource("BoxShape3D_s5vmt")

[node name="Workbench-empty" type="MeshInstance3D" parent="TableBody"]
transform = Transform3D(3.5, 0, 0, 0, 2, 0, 0, 0, 2.2, 0.168648, 0.38226, 0)
mesh = ExtResource("2_5jwwm")
skeleton = NodePath("../../..")

[node name="Workbench-empty2" type="MeshInstance3D" parent="TableBody"]
transform = Transform3D(3.5, 3.01992e-07, -3.32191e-07, 5.28485e-07, -2, -1.6814e-14, -5.28485e-07, -3.0314e-14, -2.2, 0.168648, 0.38226, 0)
mesh = ExtResource("2_5jwwm")
skeleton = NodePath("../../..")

[node name="Spinning" type="Node3D" parent="."]
transform = Transform3D(-0.788233, 0, -0.615377, 0, 1, 0, 0.615377, 0, -0.788233, 0, 0.112735, 0)

[node name="Spinning-plate" type="MeshInstance3D" parent="Spinning"]
transform = Transform3D(-2.28385, 0, -1.01687, 0, 2.5, 0, 1.01687, 0, -2.28385, 0, 0.114838, 0)
mesh = ExtResource("3_g2k80")
skeleton = NodePath("../../..")

[node name="Placeholder" type="Node3D" parent="Spinning"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.77468, 0)

[node name="PlateBody" type="StaticBody3D" parent="."]
unique_name_in_owner = true
constant_angular_velocity = Vector3(0, 3.80446, 0)

[node name="CollisionShape3D2" type="CollisionShape3D" parent="PlateBody"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.860398, 0)
shape = SubResource("CylinderShape3D_wf56e")

[node name="Node3D" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.819742, -0.572733, 0, 0.572733, 0.819742, 0.506263, 0.891196, -0.186993)

[node name="PowerBox" type="MeshInstance3D" parent="Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0388083, 0)
mesh = SubResource("BoxMesh_lu8nq")
skeleton = NodePath("../..")

[node name="Label3D" type="Label3D" parent="Node3D"]
transform = Transform3D(2.75, 0, 0, 0, -3.57628e-07, 2.75, 0, -2.75, -3.57628e-07, 0, 0.0215044, 0.047015)
pixel_size = 0.001
double_sided = false
alpha_cut = 1
texture_filter = 1
outline_modulate = Color(0.568973, 0.568973, 0.568973, 1)
text = "POWER"
font_size = 10
outline_size = 0

[node name="InteractableAreaButton" parent="Node3D" instance=ExtResource("4_jfb74")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.025, -0.0237908)
button = NodePath("MeshInstance3D")
duration = 0.2

[node name="CollisionShape3D" type="CollisionShape3D" parent="Node3D/InteractableAreaButton"]
shape = SubResource("SphereShape3D_w2ld0")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Node3D/InteractableAreaButton"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0139211, 0)
mesh = SubResource("CylinderMesh_jeg72")

[node name="ButtonAudio" type="AudioStreamPlayer3D" parent="Node3D/InteractableAreaButton"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.140602, 0.0646408)
stream = ExtResource("5_nk65y")
bus = &"Items"

[node name="StaticBody3D" type="StaticBody3D" parent="Node3D"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Node3D/StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0484678, 0)
shape = SubResource("BoxShape3D_1iycd")

[node name="WoodSpinningAudio" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.716794, 0)
stream = ExtResource("6_i5q4o")
volume_db = -46.0517
bus = &"Items"

[connection signal="button_pressed" from="Node3D/InteractableAreaButton" to="." method="_on_power_button_pressed"]
